<?xml version="1.0"?>
<package format="2">
  <name>lazy_mapping_moveit</name>
  <version>0.0.0</version>
  <description>The lazy_mapping_moveit package</description>

  <maintainer email="kika@todo.todo">kika</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend> -->
  <build_depend>tf</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>


  <exec_depend>rviz</exec_depend>
  <!-- <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend> -->
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <export>
  </export>
</package>
